unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureParameter__mdt/fferpcore__FeatureConsoleFeatureParameter__mdt.object-meta.xml
<CustomObject>
    <label>Feature Parameter</label>
    <pluralLabel>Feature Parameters</pluralLabel>
</CustomObject>