unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureParameter__mdt/fields/fferpcore__FeatureStep__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FeatureStep__c</fullName>
    <label>Feature Step</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>