unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureParameter__mdt/fields/fferpcore__ParameterType__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ParameterType__c</fullName>
    <label>Parameter Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>