unpackaged/main/default/objects/fferpcore__FeatureConsoleFeatureParameter__mdt/fields/fferpcore__ParameterValueOnEnable__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ParameterValueOnEnable__c</fullName>
    <label>Parameter Value On Enable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>